# blockchain-explorer-practice

./: .gitignore  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml
examples/: example.rs
scenarios/: scenario1.json
src/: blocks.rs  lib.rs  main.rs  tests.rs
