[package]
name = "blockchain-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
json = "0.12.4"
lazy_static = "1.4.0"
lmdb = "0.8.0"
rand_core = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10.5"
tempdir = "0.3.7"
